Fix Blockquote and popup heading contrast issues

--- a/web/app/themes/justicejobs/src/scss/components/_accordion.scss
+++ b/web/app/themes/justicejobs/src/scss/components/_accordion.scss
@@ -123,7 +123,7 @@
   &__quote {
     padding: 30px;
     color: #ffff;
-    background: $light-blue;
+    background: $dark-blue;
 
     @include respond-to(sm) {
       padding: 50px;
